--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^1.2.1",
+    "three": "^0.125.2",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
@@ -32,5 +33,10 @@
   "bugs": {
     "url": "https://github.com/iondrimba/madcaps/issues"
   },
-  "homepage": "https://github.com/iondrimba/madcaps#readme"
+  "homepage": "https://github.com/iondrimba/madcaps#readme",
+  "dependencies": {
+    "gsap": "^3.6.0",
+    "stats-js": "^1.0.1",
+    "tweakpane": "^1.5.9"
+  }
 }
