--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "style-loader": "^1.2.1",
     "three": "^0.125.2",
     "webpack": "^5.21.2",
